--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
             "email": "anboz98sultonov@gmail.com"
         }
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "require": {
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.4.1"
