--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "version": "2.0.0",
+    "version": "v2.0.0",
     "name": "alif/alif-sms-notification",
     "type": "package",
     "license": "MIT",
